fixed width error which was causing overflow

--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -116,9 +116,9 @@ body{
     h1{
       font-family: 'Roboto', sans-serif;
       font-weight: 100;
-      // font-size: 50px;
+      font-size: 50px;
       color:white;
-      background-color: rgba(169, 39, 39, 0.281);
+      background-color: rgba(0, 0, 0, 0.281);
 
     }
   }
