--- a/sass/_media-queries.scss
+++ b/sass/_media-queries.scss
@@ -4,7 +4,6 @@
   .homepage{
     &-text{
       margin-top: 6rem;
-      width: 450px;
       
       h1{
         font-size: 66px;
